--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
         <title>Plantas_medicinais</title>
         <Style>
             body{
-                background-color: white;
+                background-color: red;
             }
         </Style>
     </head>
