--- a/Carqueja.html
+++ b/Carqueja.html
@@ -23,7 +23,7 @@
     <body>
         <h1></h1>
         <h2></h2>
-            <img src="Carqueja.jpg" weight=200px width=" 400px">   
+            <img src="midia/image/Carqueja.jpg" weight=200px width=" 400px">   
             <h3></h3>
 
             <p><b><font size="6" face="arial" color="BLACK">CARQUEJA</font></b></p><br>
