--- a/Cidreira.html
+++ b/Cidreira.html
@@ -20,7 +20,7 @@
     <body>
         <h1></h1>
         <h2></h2>
-            <img src="Cidreira.jpg" weight=200px width=" 400px">   
+            <img src="midia/image/Cidreira.jpg" weight=200px width=" 400px">   
             <h3></h3>
 
             <p><b><font size="6" face="arial" color="BLACK">CIDREIRA</font></b></p><br>
