--- a/main.html
+++ b/main.html
@@ -5,13 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Plantas_medicinais</title>
-        <Style>
-            body{
-                background-color: antiquewhite;
-            }
-        </Style>
+        <link rel="stylesheet" href="./style.css"/> <!--Tag utilizada para fazer a utilizacao de um css na criacao da pagina-->
     </head>
     <body>
-        
+        <div class="pai">
+            <div class="filho">
+                
+            </div>
+        </div>
     </body>
 </html>
