--- a/Cidreira.html
+++ b/Cidreira.html
@@ -10,8 +10,10 @@
                 background-attachment: fixed;
                 background-size: cover;
                 margin: 3cm;    
-                }       
-
+                }    
+                p {
+                    text-align: justify;
+                }    
             </style>
             <meta http-equiv="refresh" content="30; Cidreira.html">
             <meta name="keywords" content="" />
@@ -26,36 +28,36 @@
             <p><b><font size="6" face="arial" color="BLACK">CIDREIRA</font></b></p><br>
 
                 <font size="4" color="black">  
-                    <b>Nome popular:</b> erva-cidreira, cidreira, melissa, chá-da-frança, coroa-de-rei, capim-cheiroso, capim-cidreira, limonete
-                    melissa-romana, salva-do-brasil. <br><br>
+                    <p><b>Nome popular:</b> erva-cidreira, cidreira, melissa, chá-da-frança, coroa-de-rei, capim-cheiroso, capim-cidreira, limonete
+                    melissa-romana, salva-do-brasil.</p>
 
-                    <b>Nome científico:</b><i> Melissa officinalis. </i><br><br>
+                    <p><b>Nome científico:</b><i> Melissa officinalis.</i></p>
                 
-                    <b>Família:</b> Lamiaceae. <br><br>
+                    <p><b>Família:</b> Lamiaceae.</p>
 
-                    <b> Descrição:</b> A erva-cidreira é uma planta herbácea e perene, de reconhecido valor como aromática e medicinal. <br>
-                        Ela pertence à mesma família da hortelã e do manjericão e apresenta um típico perfume de limão nas folhas.<br>
-                        Ela é bastante confundida com a erva-cidreira-de-folha (Lippia alba) e com o capim-cidró (Cymbopogon citratus),<br>
-                        devido ao aroma semelhante e nomes populares em comum. Suas folhas são opostas, ovadas a rombóides, de margens crenadas e de cor verde clara.<br>
-                        Os ramos são quadrangulares, ramificados e podem ser verdes ou avermelhados, mais eretos ou mais prostrados, de acordo com a cultivar.<br>
-                        Ocorre ainda uma cultivar de folhas amarelas, a “All Gold” e uma variegada de amarelo, a “Variegata”. Floresce na primavera e verão,<br>
-                        despontando flores pequenas, delicadas, de cor amarelo clara a lilás. Os frutos que se seguem são do tipo aquênio, oblongos e pardacentos.<br> 
-                        A floração da erva-cidreira é muito atrativa para abelhas e borboletas. .<br><br>
+                    <p><b> Descrição:</b> A erva-cidreira é uma planta herbácea e perene, de reconhecido valor como aromática e medicinal.
+                        Ela pertence à mesma família da hortelã e do manjericão e apresenta um típico perfume de limão nas folhas.
+                        Ela é bastante confundida com a erva-cidreira-de-folha (Lippia alba) e com o capim-cidró (Cymbopogon citratus),
+                        devido ao aroma semelhante e nomes populares em comum. Suas folhas são opostas, ovadas a rombóides, de margens crenadas e de cor verde clara.
+                        Os ramos são quadrangulares, ramificados e podem ser verdes ou avermelhados, mais eretos ou mais prostrados, de acordo com a cultivar.
+                        Ocorre ainda uma cultivar de folhas amarelas, a “All Gold” e uma variegada de amarelo, a “Variegata”. Floresce na primavera e verão,
+                        despontando flores pequenas, delicadas, de cor amarelo clara a lilás. Os frutos que se seguem são do tipo aquênio, oblongos e pardacentos. 
+                        A floração da erva-cidreira é muito atrativa para abelhas e borboletas.</p>
 
-                    <b> Regiões de cultivo:</b> Originária do Texas (EUA), também é cultivada no Caribe, México, América Central e América do Sul .<br><br> 
+                    <p><b> Regiões de cultivo:</b> Originária do Texas (EUA), também é cultivada no Caribe, México, América Central e América do Sul.</p> 
 
-                    <b> Forma de cultivo:</b> Espaçamento de 50 x 70 cm entre plantas. Adapta bem a vários tipos de solos, com preferência por aqueles com boa drenagem,<br> 
-                        podendo ser plantada como bordadura de hortas. Recomenda-se uma adubação com esterco de gado bem curtido, de aves ou composto orgânico,<br> 
-                        quando necessário. .<br><br>
+                    <p><b> Forma de cultivo:</b> Espaçamento de 50 x 70 cm entre plantas. Adapta bem a vários tipos de solos, com preferência por aqueles com boa drenagem, 
+                        podendo ser plantada como bordadura de hortas. Recomenda-se uma adubação com esterco de gado bem curtido, de aves ou composto orgânico,
+                        quando necessário.</p>
 
-                    <b> Utilidade na medicina:</b> Folhas ou ramos são usadas como sedativo, em dores de cabeça e de dente, em estados gripais<br>
-                        (como diaforético e tônico), em palpitações, em distúrbios gastrointestinais e menstruais, bem como em reumatismo.<br><br>
+                    <p><b> Utilidade na medicina:</b> Folhas ou ramos são usadas como sedativo, em dores de cabeça e de dente, em estados gripais
+                        (como diaforético e tônico), em palpitações, em distúrbios gastrointestinais e menstruais, bem como em reumatismo.</p>
 
-                    <b> Contraindicações:</b> Gestantes, lactantes e pessoas com hipotireoidismo e hipotensão não devem fazer o consumo.<br>
-                        Além disso, quem faz uso de calmantes e sedativos deve consultar o médico antes de tomar o chá.<br><br>   
+                    <p><b> Contraindicações:</b> Gestantes, lactantes e pessoas com hipotireoidismo e hipotensão não devem fazer o consumo.
+                        Além disso, quem faz uso de calmantes e sedativos deve consultar o médico antes de tomar o chá.</p>
 
-                    <b> Forma de aplicação:</b>  Deve adicionar as folhas de cidreira na água fervida, desligue o fogo e deixe por 20 minutos, após passado o tempo <br>     
-                        adicione as folhas secas da planta e deixe tampado por 20 minutos, coe e beba 3 vezes ao dia. <br><br>
+                    <p><b> Forma de aplicação:</b>  Deve adicionar as folhas de cidreira na água fervida, desligue o fogo e deixe por 20 minutos, após passado o tempo     
+                        adicione as folhas secas da planta e deixe tampado por 20 minutos, coe e beba 3 vezes ao dia.</p>
 
                     https://www.jardineiro.net/plantas/erva-cidreira-melissa-officinalis.html
                 </font>
