--- a/Malva.html
+++ b/Malva.html
@@ -11,7 +11,9 @@
                 background-size: cover;
                 margin: 3cm;    
                 }       
-
+                p {
+                    text-align: justify;
+                }  
             </style>
             <meta http-equiv="refresh" content="30; Malva.html">
             <meta name="keywords" content="" />
@@ -26,39 +28,35 @@
             <p><b><font size="6" face="arial" color="BLACK">MALVA</font></b></p><br>
 
                 <font size="4" color="black">  
-                    <b>Nome popular:</b> malva maior, malva-alta, malva- dedente, malva-cheirosa e malva silvestre.<br><br>
+                    <p><b>Nome popular:</b> malva maior, malva-alta, malva- dedente, malva-cheirosa e malva silvestre.</p>
 
-                    <b>Nome científico:</b><i> Malva sylvestris  L. </i><br><br>
+                    <p><b>Nome científico:</b><i> Malva sylvestris  L. </i></p>
                 
-                    <b>Família:</b> Malvaceae. <br><br>
+                    <p><b>Família:</b> Malvaceae.</p>
 
-                    <b> Descrição:</b> Cultivada como planta ornamental pela beleza das suas flores, pertencente à família das Malváceas,
+                    <p><b> Descrição:</b> Cultivada como planta ornamental pela beleza das suas flores, pertencente à família das Malváceas,</p>
 
+                    <p><b> Regiões de cultivo:</b> Essa espécie medicinal é originada da Europa, norte da Ásia e África e é cultivada em alguns países 
+                    da Europa central e América.</p>
 
+                    <p><b> Forma de cultivo:</b> O espaçamento deve ser de 1 metro entre as linhas e de 0,5m entre plantas. Solos encharcados e mal drenados não são recomentados,
+                    é ideal as áreas de terras firmes e planas. O Plantio deve ser feito no início da estação chuvosa, de acordo com o local de produção.</p>
 
-                    .<br><br>
+                    <p><b> Utilidade na medicina:</b> Suas folhas, flores e frutos são empregados na forma de infusão no tratamento de bronquite crônica,
+                    tosse, asma, enfisema pulmonar e coqueluche, bem como nos casos de colite e constipação intestinal. Em dose excessiva é laxativo.
+                    Externamente, na forma de banho localizado, é empregada contra afecções da pele, contusões, furúnculos, abscessos e picadas de insetos e,
+                    na forma de bochechos e gargarejos, contra inflamações e afecções da boca e garganta.</p>
 
-                    <b> Regiões de cultivo:</b> Essa espécie medicinal é originada da Europa, norte da Ásia e África e é cultivada em alguns países<br> 
-                    da Europa central e América.<br><br> 
+                    <p><b> Contraindicações:</b> O principal efeito colateral da malva é a intoxicação, quando utilizada em grandes doses.
+                    Além disso, o chá de malva está contraindicado durante a gravidez e a amamentação. A Malva pode ainda comprometer a absorção de outros medicamentos
+                    que contenham mucilagens.</p>  
 
-                    <b> Forma de cultivo:</b> O espaçamento deve ser de 1 metro entre as linhas e de 0,5m entre plantas. Solos encharcados e mal drenados não são recomentados,<br>
-                    é ideal as áreas de terras firmes e planas. O Plantio deve ser feito no início da estação chuvosa, de acordo com o local de produção..<br><br>
-
-                    <b> Utilidade na medicina:</b> Suas folhas, flores e frutos são empregados na forma de infusão no tratamento de bronquite crônica, <br> 
-                    tosse, asma, enfisema pulmonar e coqueluche, bem como nos casos de colite e constipação intestinal. Em dose excessiva é laxativo. <br> 
-                    Externamente, na forma de banho localizado, é empregada contra afecções da pele, contusões, furúnculos, abscessos e picadas de insetos e,<br> 
-                    na forma de bochechos e gargarejos, contra inflamações e afecções da boca e garganta.<br><br>
-
-                    <b> Contraindicações:</b> O principal efeito colateral da malva é a intoxicação, quando utilizada em grandes doses.<br>
-                    Além disso, o chá de malva está contraindicado durante a gravidez e a amamentação. A Malva pode ainda comprometer a absorção de outros medicamentos<br>
-                    que contenham mucilagens.<br><br>   
-
-                    <b> Forma de aplicação:</b> Planta muito utilizada como antisséptico e seus benefícios podem ser obtidos através de infusões das folhas para enxague bucal,<br>
-                    gargarejo e aplicação em lesões da pele. As folhas e flores (in natura ou secas) da Malva podem ser usadas para chás ou infusões. <br>
-                    Os óleos extraídos das folhas, utilizados na indústria farmacêutica, podem ser adquiridos comercialmente. Como chá: ferver cerca de meio litro de água <br>
-                    e ao levantar fervura adicionar 5 colheres de sopa de folhas secas (ou flores) ou 8 colheres de folhas in natura picadas, deixar cerca de 1 minuto, desligar, <br>
-                    deixar descansar uns 5 minutos, coar e tomar quente ou frio umas 3 vezes ao dia. Também pode ser feito gargarejo e enxágue bucal.<br>
-                    Pode ser usado também em compressas sobre a pele.<br><br>
+                    <p><b> Forma de aplicação:</b> Planta muito utilizada como antisséptico e seus benefícios podem ser obtidos através de infusões das folhas para enxague bucal,
+                    gargarejo e aplicação em lesões da pele. As folhas e flores (in natura ou secas) da Malva podem ser usadas para chás ou infusões.
+                    Os óleos extraídos das folhas, utilizados na indústria farmacêutica, podem ser adquiridos comercialmente. Como chá: ferver cerca de meio litro de água
+                    e ao levantar fervura adicionar 5 colheres de sopa de folhas secas (ou flores) ou 8 colheres de folhas in natura picadas, deixar cerca de 1 minuto, desligar,
+                    deixar descansar uns 5 minutos, coar e tomar quente ou frio umas 3 vezes ao dia. Também pode ser feito gargarejo e enxágue bucal.
+                    Pode ser usado também em compressas sobre a pele.</p>
 
                     https://hortodidatico.ufsc.br/malva/
 
