--- a/Cavalinha.html
+++ b/Cavalinha.html
@@ -10,7 +10,10 @@
                 background-attachment: fixed;
                 background-size: cover;
                 margin: 3cm;    
-                }       
+                }    
+                p {
+                    text-align: justify;
+                }   
             </style>
             <meta http-equiv="refresh" content="30; Cavalinha.html">
             <meta name="keywords" content="" />
@@ -23,40 +26,41 @@
 
             <p><b><font size="6" face="arial" color="BLACK">CAVALINHA</font></b></p><br>
                 <font size="4" color="black">  
-                    <b>Nome popular:</b> Cavalinha, cavalinha-gigante, cauda-de-cavalo, rabo-de-cavalo, erva-canudo, rabo-de-raposa, lixa-vegetal, cana-de-jacaré.<br><br>
+                    <p><b>Nome popular:</b> Cavalinha, cavalinha-gigante, cauda-de-cavalo, rabo-de-cavalo, erva-canudo, rabo-de-raposa, lixa-vegetal, cana-de-jacaré.</p>
 
                     <b>Nome científico:</b><i> Equisetum giganteum L.</i><br><br>   
                 
-                    <b>Família:</b> Equisetaceae. <br><br>
+                    <p><b>Família:</b> Equisetaceae. </p>
 
-                    <b>Descrição:</b> Planta de origem Europeia, é um tipo de samambaia, pode crescer de 1,5 a 2 metros de altura. Pertencente à família Equisetaceae,<br> 
-                        possui um formato diferente de suas “parentes” próximas (família das avencas e samambaias), não produz flores, mas pequenos cones contendo esporos.<br> 
-                        Seus rizomas são longos e tem nós de espaço a espaço além de lançarem ramificações compridas que formam curvas semelhantes ao que acontece com os<br>
-                        “rabos de cavalos”. Daí seu nome. Dizem que os antigos pastores faziam flautas com o caule oco da cavalinha que eram usadas para espantar cobras.<br>
-                        Durante o período em que a Terra concentrava maiores taxas de carbono, a cavalinha era uma planta dominante e atingia mais de 12 metros de altura.<br><br></>
+                    <p><b>Descrição:</b> Planta de origem Europeia, é um tipo de samambaia, pode crescer de 1,5 a 2 metros de altura. Pertencente à família Equisetaceae,
+                        possui um formato diferente de suas “parentes” próximas (família das avencas e samambaias), não produz flores, mas pequenos cones contendo esporos. 
+                        Seus rizomas são longos e tem nós de espaço a espaço além de lançarem ramificações compridas que formam curvas semelhantes ao que acontece com os
+                        “rabos de cavalos”. Daí seu nome. Dizem que os antigos pastores faziam flautas com o caule oco da cavalinha que eram usadas para espantar cobras.
+                        Durante o período em que a Terra concentrava maiores taxas de carbono, a cavalinha era uma planta dominante e atingia mais de 12 metros de altura.</p>
 
-                    <b> Regiões de cultivo:</b> Cresce espontaneamente com muito vigor em solos agrícolas e outras áreas sob distúrbios nas regiões Sul<br>
-                        e Sudeste do Brasil durante inverno e primavera, onde é considerada “planta daninha”. Suas folhas são consumidas como saladas em algumas religiões.<br> 
-                        As flores são melíferas. Essa planta é usada na medicina tradicional desde tempos remotos na Europa.<br><br> 
+                    <p><b> Regiões de cultivo:</b> Cresce espontaneamente com muito vigor em solos agrícolas e outras áreas sob distúrbios nas regiões Sul
+                        e Sudeste do Brasil durante inverno e primavera, onde é considerada “planta daninha”. Suas folhas são consumidas como saladas em algumas religiões. 
+                        As flores são melíferas. Essa planta é usada na medicina tradicional desde tempos remotos na Europa.</p> 
 
-                    <b> Forma de cultivo:</b> É ma planta perene que não floresce. Possui hastes verdes verticais com faixas horizontais, semelhantes ao bambu.<br>
-                        O rabo de cavalo se reproduz por meio de esporos ao invés vez de sementes, assim como por rizomas subterrâneos.<br>
-                        A cavalinha cresce em condições úmidas e pode até crescer em água parada. Por esse motivo, é comumente usado para decorar jardins aquáticos<br>
-                        ou áreas pantanosas onde poucas outras plantas podem sobreviver. Pode ser utilizado também como destaque ao longo das bordas ou em grandes vasos de pátio.<br><br>
+                    <p><b> Forma de cultivo:</b> É ma planta perene que não floresce. Possui hastes verdes verticais com faixas horizontais, semelhantes ao bambu.
+                        O rabo de cavalo se reproduz por meio de esporos ao invés vez de sementes, assim como por rizomas subterrâneos.
+                        A cavalinha cresce em condições úmidas e pode até crescer em água parada. Por esse motivo, é comumente usado para decorar jardins aquáticos
+                        ou áreas pantanosas onde poucas outras plantas podem sobreviver. Pode ser utilizado também como destaque ao longo das bordas ou em grandes vasos de pátio.</p>
 
-                    <b> Utilidade na medicina:</b> No Brasil é considerada diurética potente, sendo empregadas suas folhas, raízes e capítulos florais, para dores reumáticas,<br>
-                        diabetes, anti-inflamatória, antimicrobiana, cicatrizante, auxilia na redução da oleosidade da pele, tonificante, tratamento de ferida inapetência,<br>
-                        afecção da pele, hepáticas e biliares, prisão de ventre e astenia. Para distúrbios de função digestiva (estomacal, hepática, biliar, intestinal e prisão de ventre).<br><br> 
+                    <p><b> Utilidade na medicina:</b> No Brasil é considerada diurética potente, sendo empregadas suas folhas, raízes e capítulos florais, para dores reumáticas,
+                        diabetes, anti-inflamatória, antimicrobiana, cicatrizante, auxilia na redução da oleosidade da pele, tonificante, tratamento de ferida inapetência,
+                        afecção da pele, hepáticas e biliares, prisão de ventre e astenia. Para distúrbios de função digestiva (estomacal, hepática, biliar, intestinal e prisão
+                        de ventre).</p>
 
-                    <b> Contraindicações:</b> É contra-indicada durante a gravidez e em mulheres que estão amamentando e para crianças.<br> 
-                        Não usar quantidades maiores que 1 colher de café de hastes picadas. <br><br>   
+                    <p><b> Contraindicações:</b> É contra-indicada durante a gravidez e em mulheres que estão amamentando e para crianças.
+                        Não usar quantidades maiores que 1 colher de café de hastes picadas.</p> 
 
-                    <b> Forma de aplicação:</b> É recomendado seu extrato alcoólico, preparado amassando-se em pilão 2 colheres (sopa) de raízes e folhas picadas<br>
-                        e deixando-se em repouso por 3 dias em 1 xícara (chá) de álcool de cereais a 75%, administrando 1 colher (chá) diluído em um pouco de água<br>
-                        antes das principais refeições. Recomenda-se ainda em uso externo para afecções de pele do rosto (pruridos, eczemas, escamações, vermelhidão)<br>
-                        e irritação dos olhos, o seu chá, preparado com 1 colher (sopa) de raízes picadas em 1 xícara (chá) de água em fervura por 5 minutos e adicionando-se<br>
-                        1 colher (sobremesa) de mel após esfriar e coar. Na sua composição química destaca-se a presença de óleo-resina, alcaloides (taraxina), taninos,<br>
-                         carotenoides, colina, fitoesterol, sais minerais (principalmente potássio) e princípio amargo (taraxicina).<br><br>
+                    <p><b> Forma de aplicação:</b> É recomendado seu extrato alcoólico, preparado amassando-se em pilão 2 colheres (sopa) de raízes e folhas picadas
+                        e deixando-se em repouso por 3 dias em 1 xícara (chá) de álcool de cereais a 75%, administrando 1 colher (chá) diluído em um pouco de água
+                        antes das principais refeições. Recomenda-se ainda em uso externo para afecções de pele do rosto (pruridos, eczemas, escamações, vermelhidão)
+                        e irritação dos olhos, o seu chá, preparado com 1 colher (sopa) de raízes picadas em 1 xícara (chá) de água em fervura por 5 minutos e adicionando-se
+                        1 colher (sobremesa) de mel após esfriar e coar. Na sua composição química destaca-se a presença de óleo-resina, alcaloides (taraxina), taninos,
+                         carotenoides, colina, fitoesterol, sais minerais (principalmente potássio) e princípio amargo (taraxicina).</p>
 
                          https://www.saovendelino.rs.gov.br/plantas_medicinais/cavalinha
                          https://eic.ifsc.usp.br/cavalinha/
