--- a/Carqueja.html
+++ b/Carqueja.html
@@ -19,6 +19,9 @@
             <meta name="keywords" content="" />
     </head>
     <body>
+
+        <div id="teste">
+
         <h1></h1>
         <h2></h2>
             <img src="midia/image/Carqueja.jpg" weight=200px width=" 400px">   
@@ -60,6 +63,7 @@
                     <P><b> Forma de aplicação:</b> Para auxiliar na digestão, prepare um chá com 1 colher de sopa da erva para cada xícara de água
                         e tome até 3 vezes ao dia.</P>
                 </font>
+        </div>        
     <body>
 
 </html>
