--- a/Proj_final_HMTL/BASE.html
+++ b/Proj_final_HMTL/BASE.html
@@ -57,37 +57,37 @@
 						<div class="pag">
 							<img class="work-img" src="../midia/image/Babosa.jfif">
 							<a href="" target="_blank"> <!--Link-->
-								<div class="work-content">Babosa<br>clique para saber mais.</div>
+								<A HREF=Babosa.html><div class="work-content">Babosa<br>clique para saber mais.</div></A>
 							</a>
 						</div>
 						<div class="pag">
 							<img class="work-img" src="../midia/image/Carqueja.jfif">
 							<a href="" target="_blank"> <!--Link-->
-								<div class="work-content">Carqueja<br>clique para saber mais.</div>
+								<A HREF=Carqueja.html><div class="work-content">Carqueja<br>clique para saber mais.</div></A>
 							</a>
 						</div>
 						<div class="pag">
 							<img class="work-img" src="../midia/image/Cavalinha.jfif">
 							<a href="" target="_blank"> <!--Link-->
-								<div class="work-content">Cavalinha<br>clique para saber mais.</div>
+								<A HREF=Cavalinha.html><div class="work-content">Cavalinha<br>clique para saber mais.</div></A>
 							</a>
 						</div>
 						<div class="pag">
 							<img class="work-img" src="../midia/image/Cidreira.jfif">
 							<a href="" target="_blank"> <!--Link-->
-								<div class="work-content">Cidreira<br>clique para saber mais.</div>
+								<A HREF=Cidreira.html><div class="work-content">Cidreira<br>clique para saber mais.</div></A>
 							</a>
 						</div>
 						<div class="pag">
 							<img class="work-img" src="../midia/image/Guaco.jfif">
 							<a href="" target="_blank"> <!--Link-->
-								<div class="work-content">Guaco<br>clique para saber mais.</div>
+								<A HREF=Guaco.html><div class="work-content">Guaco<br>clique para saber mais.</div></A>
 							</a>
 						</div>
 						<div class="pag">
 							<img class="work-img" src="../midia/image/Malva.jfif">
 							<a href="" target="_blank"> <!--Link-->
-								<div class="work-content">Malva<br>clique para saber mais.</div>
+								<A HREF=Malva.html><div class="work-content">Malva<br>clique para saber mais.</div></A>
 							</a>
 						</div>
 					</div>
@@ -104,10 +104,13 @@
 					Aqui estão algumas redes sociais que estamos presentes</p>
 				<div class="social-media">
 					<a href="https://www.youtube.com/" target="_blank"><img class='logo-rede'
-							src="../midia/image/Logo_Youtube.png">
-						</i></a>
+							src="../midia/image/Logo_Youtube.png"> </i></a>
+						
 					<a href="https://www.facebook.com/" target="_blank"><img class='logo-rede'
 							src="../midia/image/Logo_Facebook.png"> </i></a>
+
+					<a href="https://www.instagram.com/" target="_blank"><img class='logo-rede'
+							src="../midia/image/Logo_Instagram.png"> </i></a>
 				</div>
 			</div>
 			<!--──────────────Desencolvimento────────────────-->
