--- a/Proj_final_HMTL/BASE.html
+++ b/Proj_final_HMTL/BASE.html
@@ -6,7 +6,6 @@
 	<title>site</title>
 	<link href="style.css" rel="stylesheet" type="text/css" />
 	<link rel="icon" href="../midia/image/Logo_planta.png">
-
 </head>
 
 <body>
@@ -27,7 +26,7 @@
 				</ul>
 			</nav>
 		</header>
-		<main>
+	<main>
 			<!--─────────────────Home────────────────-->
 			<div id="home">
 				<div class="filter"></div>
@@ -104,8 +103,8 @@
 					Aqui estão algumas redes sociais que estamos presentes</p>
 				<div class="social-media">
 					<a href="https://www.youtube.com/" target="_blank"><img class='logo-rede'
-							src="../midia/image/Logo_Youtube.png"> </i></a>
-						
+							src="../midia/image/Logo_Youtube.png">
+						</i></a>
 					<a href="https://www.facebook.com/" target="_blank"><img class='logo-rede'
 							src="../midia/image/Logo_Facebook.png"> </i></a>
 
@@ -116,14 +115,15 @@
 			<!--──────────────Desencolvimento────────────────-->
 			<div id="name">
 				<h3>DESENVOLVIMENTO
-					<hr></br>
+					<hr>
 				</h3>
-				<p>Mateus Trintin dos Santos</br>
-					Djonatan Meinicke</br>
-					Ruam Boscaini</p>
+				<p>Mateus Trintin dos Santos<br>
+					Djonatan Meinicke<br>
+					Ruam Boscaini<br><br>
+				</p>
 			</div>
 
-		</main>
+	</main>
 
 </body>
 
