--- a/Proj_final_HMTL/Carqueja.html
+++ b/Proj_final_HMTL/Carqueja.html
@@ -4,24 +4,76 @@
 <head>       
     <meta charset="utf-8">
     <title>Carqueja</title>
-    <link href="style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="../midia/image/Logo_planta.png">
 </head>
 
 <body>
-	<!--────────────────Cabeçalho───────────────-->
-	<div id="home2">
-	    <div class="filter"></div>
-            <section class="text">
 
-            <h2>CARQUEJA<br><br></h2>
+    <div class="container">
 
-            <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Carqueja.png" weight=200px width=" 400px">    
+		<!--────────────────Cabeçalho───────────────-->
+		<header>
+			<a class="logo">
+				<img src="../midia/image/Logo_planta.png" />
+			</a>
+			<nav>	
+                <ul class="nav-bar">
+                    <div class="bg"></div>
+                    <li><a class="nav-link" href="#home">Home</a></li>
+                    <li><a class="nav-link" href="#plantas">Plantas</a></li>
+                    <li><a class="nav-link" href="#contato">Contato</a></li>	
+                </ul>		
+			</nav>
+		</header>
+    <main>
 
-            <p><b>Nome popular:</b> Carqueja-amargosa, carqueja, carqueja amarga, amargosa, vassoura, bacanta, carque.</p><br> 
+		<!--─────────────────Home────────────────-->
+		<div id="homeCarqueja">
+			<div class="filter"></div>
+			<section class="intro">
+				<h3>CARQUEJA
+                    <hr>
+				</h3>
+			</section>
+		</div>
 
-            <p><b>Nome científico:</b><i> Baccharis genistelloides. </i></p><br> 
+        <!--───────────────Conteudo───────────────-->   
+
+        <link href="carrosel.css" rel="stylesheet" type="text/css" />
+
+            <div class="carrosel">    
+                <ul>
+                    <li>
+                        <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Carqueja_1.jpg" width="500px" height="400px">
+                    </li>
+                    <li>
+                        <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Carqueja_2.png" width="500px"height="400px">
+                    </li>
+                    <li>
+                        <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Carqueja_3.png" width="500px"height="400px">
+                    </li>
+                    <li>
+                        <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Carqueja_4.png" width="500px"height="400px">
+                    </li>
+                    <li>
+                        <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Carqueja_5.png" width="500px"height="400px">
+                    </li>
+                    <li>
+                        <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Carqueja_6.png" width="500px"height="400px">
+                    </li>
+                </ul>
+                
+            </div>  
+
+	        <div class="filter"></div>
+            <section class="text">   
+
+            <p><b>Nome popular:</b> Carqueja-amargosa, carqueja, carqueja amarga, amargosa, vassoura, bacanta, carque.</p><br><br> 
+
+            <p><b>Nome científico:</b><i> Baccharis genistelloides. </i></p><br><br> 
         
-            <p><b>Família:</b> Asteraceae (Compositae).</p><br> 
+            <p><b>Família:</b> Asteraceae (Compositae).</p><br><br> 
 
             <p><b> Descrição:</b> A carqueja é uma erva espontânea em terrenos baldios e pastos, sendo por muitas vezes considerada daninha. 
                 Ela não possui folhas verdadeiras e suas hastes são ramificadas e apresentam asas membranáceas, descontínuas e verdes, 
@@ -30,28 +82,34 @@
                 A carqueja é muito rústica e de fácil cultivo, além de interessante no paisagismo pelo seu aspecto diferente. 
                 Pode ser plantada em vasos e jardineiras, assim como em canteiros adubados, onde forma pequenas moitas arredondadas e compactas. 
                 É muito utilizada em chás emagrecedores e no chimarrão gaúcho. Presta-se também a aromatização de licores e vinhos e à fabricação
-                de vassouras rústicas.</p><br> 
+                de vassouras rústicas.</p><br><br> 
 
             <p><b> Regiões de cultivo:</b> Nativa dos campos e beiras de matas do Brasil, ocorre no sul (Paraná, Santa Catarina e Rio Grande do Sul),
                 no sudeste (Espírito Santo, Minas Gerais, Rio de Janeiro e São Paulo), no centro-oeste (Distrito Federal, Goiás e Mato Grosso do Sul)
-                e no nordeste (Bahia, Ceará e Pernambuco). Em países como Uruguai, Argentina, Paraguai e Bolívia também há ocorrência da planta.</p><br> 
+                e no nordeste (Bahia, Ceará e Pernambuco). Em países como Uruguai, Argentina, Paraguai e Bolívia também há ocorrência da planta.</p><br><br> 
 
             <p><b> Forma de cultivo:</b> Espaçamento de 30x30 cm entre plantas. Pode ser cultivada em regiões com até 800 de altitude.
                 Adapta bem a vários tipos de solo, crescendo abundantemente em regiões de campos e pastagens em todo o país,
-                recomendando-se uma adubação com esterco de gado bem curtido, esterco de aves e composto orgânico, quando necessário.</p><br> 
+                recomendando-se uma adubação com esterco de gado bem curtido, esterco de aves e composto orgânico, quando necessário.</p><br><br> 
 
             <p><b> Utilidade na medicina:</b> A carqueja reduz as taxas de açúcar no sangue e tem propriedades anti-úlcera e anti-inflamatórias,
-                o que ajuda no tratamento de artrites.</p><br> 
+                o que ajuda no tratamento de artrites.</p><br><br> 
 
             <p><b> Contraindicações:</b> Grávidas não devem se utilizar da planta, pois ela pode promover contrações uterinas. Deve-se evitar
                 o usoconcomitante com medicamentos para hipertensão e diabetes, pois pode causar hipotensão. Em caso de hipersensibilidade,
-                recomenda-se descontinuar o uso.</p><br>    
+                recomenda-se descontinuar o uso.</p><br><br>    
 
             <p><b> Forma de aplicação:</b> Para auxiliar na digestão, prepare um chá com 1 colher de sopa da erva para cada xícara de água
-                e tome até 3 vezes ao dia.</p><br> 
+                e tome até 3 vezes ao dia.</p><br><br> 
+
+            <p><b> Referências bibliográficas:.</p><br><br>  
+
             </section>
         </div>
     </div>
+
+    </main>
+
 <body>
 
 </html>
