--- a/Proj_final_HMTL/Cavalinha.html
+++ b/Proj_final_HMTL/Cavalinha.html
@@ -4,18 +4,69 @@
 <head>       
     <meta charset="utf-8">
     <title>Cavalinha</title>
-    <link href="style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="../midia/image/Logo_planta.png">
+    
 </head>
 
 <body>
-    <!--────────────────Cabeçalho───────────────-->
-	<div id="home2">
-	    <div class="filter"></div>
-            <section class="text">
+    <div class="container">
 
-            <h2>CAVALINHA<br></h2>
+		<!--────────────────Cabeçalho───────────────-->
+		<header>
+			<a class="logo">
+				<img src="../midia/image/Logo_planta.png" />
+			</a>
+			<nav>
+				<ul class="nav-bar">
+					<div class="bg"></div>
+					<li><a class="nav-link" href="#home">Home</a></li>
+					<li><a class="nav-link" href="#plantas">Plantas</a></li>
+					<li><a class="nav-link" href="#contato">Contato</a></li>
+				</ul>
+			</nav>
+		</header>
+    <main>
 
-            <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cavalinha.png" weight=200px width=" 400px">  
+		<!--─────────────────Home────────────────-->
+		<div id="homeCarqueja">
+			<div class="filter"></div>
+			<section class="intro">
+				<h3>CAVALINHA
+                    <hr>
+				</h3>
+			</section>
+		</div>
+
+       <!--───────────────Conteudo───────────────-->   
+
+       <link href="carrosel.css" rel="stylesheet" type="text/css" />
+
+       <div class="carrosel">    
+           <ul>
+               <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cavalinha_1.png" width="500px" height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cavalinha_2.png" width="500px"height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cavalinha_3.png" width="500px"height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cavalinha_4.png" width="500px"height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cavalinha_5.png" width="500px"height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cavalinha_6.png" width="500px"height="400px">
+               </li>
+           </ul>
+       </div>  
+
+       <div class="filter"></div>
+       <section class="text">  
 
             <p><b>Nome popular:</b> Cavalinha, cavalinha-gigante, cauda-de-cavalo, rabo-de-cavalo, erva-canudo, rabo-de-raposa, lixa-vegetal, cana-de-jacaré.</p><br>
 
@@ -52,9 +103,15 @@
                 e irritação dos olhos, o seu chá, preparado com 1 colher (sopa) de raízes picadas em 1 xícara (chá) de água em fervura por 5 minutos e adicionando-se
                 1 colher (sobremesa) de mel após esfriar e coar. Na sua composição química destaca-se a presença de óleo-resina, alcaloides (taraxina), taninos,
                 carotenoides, colina, fitoesterol, sais minerais (principalmente potássio) e princípio amargo (taraxicina).</p><br> 
+
+            <p><b> Referências bibliográficas:.</p><br>    
+
             </section>
         </div>
     </div>
+
+    </main>
+
 <body>
 
 </html>
