--- a/Proj_final_HMTL/Cidreira.html
+++ b/Proj_final_HMTL/Cidreira.html
@@ -1,21 +1,72 @@
 <!DOCTYPE html>
 <html>
-    
+
 <head>       
     <meta charset="utf-8">
     <title>Cidreira</title>
-    <link href="style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="../midia/image/Logo_planta.png">
 </head>
 
 <body>
-    <!--────────────────Cabeçalho───────────────-->
-	<div id="home2">
-	    <div class="filter"></div>
-            <section class="text">
-                
-            <h2>CIDREIRA<br></h2>
 
-            <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cidreira.png" weight=200px width=" 400px">  
+    <div class="container">
+
+		<!--────────────────Cabeçalho───────────────-->
+		<header>
+			<a class="logo">
+				<img src="../midia/image/Logo_planta.png" />
+			</a>
+			<nav>
+				<ul class="nav-bar">
+					<div class="bg"></div>
+					<li><a class="nav-link" href="#home">Home</a></li>
+					<li><a class="nav-link" href="#plantas">Plantas</a></li>
+					<li><a class="nav-link" href="#contato">Contato</a></li>
+				</ul>
+			</nav>
+		</header>
+    <main>
+
+		<!--─────────────────HomeCidreira────────────────-->
+		<div id="homeCarqueja">
+			<div class="filter"></div>
+			<section class="intro">
+				<h3>CIDREIRA
+                    <hr>
+				</h3>
+			</section>
+		</div>
+
+        <!--───────────────Conteudo───────────────-->   
+
+        <link href="carrosel.css" rel="stylesheet" type="text/css" />
+
+        <div class="carrosel">    
+            <ul>
+                <li>
+                    <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cidreira_1.png" width="500px" height="400px">
+                </li>
+                <li>
+                    <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cidreira_2.png" width="500px"height="400px">
+                </li>
+                <li>
+                    <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cidreira_3.png" width="500px"height="400px">
+                </li>
+                <li>
+                    <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cidreira_4.png" width="500px"height="400px">
+                </li>
+                <li>
+                    <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cidreira_5.png" width="500px"height="400px">
+                </li>
+                <li>
+                    <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Cidreira_6.png" width="500px"height="400px">
+                </li>
+            </ul>
+        </div>  
+
+        <div class="filter"></div>
+        <section class="text">  
 
                     <p><b>Nome popular:</b> erva-cidreira, cidreira, melissa, chá-da-frança, coroa-de-rei, capim-cheiroso, capim-cidreira, limonete
                     melissa-romana, salva-do-brasil.</p><br>
@@ -47,8 +98,15 @@
 
                     <p><b> Forma de aplicação:</b>  Deve adicionar as folhas de cidreira na água fervida, desligue o fogo e deixe por 20 minutos, após passado o tempo     
                         adicione as folhas secas da planta e deixe tampado por 20 minutos, coe e beba 3 vezes ao dia.</p><br>
+
+                    <p><b> Referências bibliográficas:.</p><br>     
+
                     </section>
                 </div>
             </div>
-    <body>
-</html>
+
+            </main>
+
+        <body>
+
+    </html>
