--- a/Proj_final_HMTL/Guaco.html
+++ b/Proj_final_HMTL/Guaco.html
@@ -4,18 +4,69 @@
 <head>       
     <meta charset="utf-8">
     <title>Guaco</title>
-    <link href="style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="../midia/image/Logo_planta.png">
+    
 </head>
 
 <body>
-    <!--────────────────Cabeçalho───────────────-->
-	<div id="home2">
-	    <div class="filter"></div>
-            <section class="text">
+    <div class="container">
 
-            <h2>GUACO<br></h2>
+		<!--────────────────Cabeçalho───────────────-->
+		<header>
+			<a class="logo">
+				<img src="../midia/image/Logo_planta.png" />
+			</a>
+			<nav>
+				<ul class="nav-bar">
+					<div class="bg"></div>
+					<li><a class="nav-link" href="#home">Home</a></li>
+					<li><a class="nav-link" href="#plantas">Plantas</a></li>
+					<li><a class="nav-link" href="#contato">Contato</a></li>
+				</ul>
+			</nav>
+		</header>
+    <main>
 
-            <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Guaco.png" weight=200px width=" 400px"> 
+		<!--─────────────────Home────────────────-->
+		<div id="homeCarqueja">
+			<div class="filter"></div>
+			<section class="intro">
+				<h3>GUACO
+                    <hr>
+				</h3>
+			</section>
+		</div>
+
+       <!--───────────────Conteudo───────────────-->   
+
+       <link href="carrosel.css" rel="stylesheet" type="text/css" />
+
+       <div class="carrosel">    
+           <ul>
+               <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Guaco_1.png" width="500px" height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Guaco_2.png" width="500px"height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Guaco_3.png" width="500px"height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Guaco_4.png" width="500px"height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Guaco_5.png" width="500px"height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Guaco_6.png" width="500px"height="400px">
+               </li>
+           </ul>
+       </div>  
+
+       <div class="filter"></div>
+       <section class="text">  
 
                     <p><b>Nome popular:</b> Guaco, erva-de-serpentes, cipó-catinga ou erva-de-cobra.</p><br>
 
@@ -45,9 +96,15 @@
                     <p><b> Forma de aplicação:</b> Em sua maioria, geralmente é utilizado em forma de xarope, porém embora seja muito fácil sua preparação,
                     épreciso lembrar que todo medicamento, mesmo sendo caseiro depende de um diagnóstico e acompanhamento médico antes de ser consumido.
                     O xarope pode ser utilizado até 3 vezes ao dia.</p><br>
-            </section>
-        </div>
-    </div>
-<body>
 
-</html>
+                    <p><b> Referências bibliográficas:.</p><br>     
+
+                    </section>
+                </div>
+            </div>
+
+            </main>
+
+        <body>
+            
+    </html>
