--- a/Proj_final_HMTL/Malva.html
+++ b/Proj_final_HMTL/Malva.html
@@ -4,18 +4,69 @@
 <head>       
     <meta charset="utf-8">
     <title>Malva</title>
-    <link href="style.css" rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="icon" href="../midia/image/Logo_planta.png">
+    
 </head>
 
 <body>
-    <!--────────────────Cabeçalho───────────────-->
-	<div id="home2">
-	    <div class="filter"></div>
-            <section class="text">
+    <div class="container">
 
-            <h2>MALVA<br></h2>
+		<!--────────────────Cabeçalho───────────────-->
+		<header>
+			<a class="logo">
+				<img src="../midia/image/Logo_planta.png" />
+			</a>
+			<nav>
+				<ul class="nav-bar">
+					<div class="bg"></div>
+					<li><a class="nav-link" href="#home">Home</a></li>
+					<li><a class="nav-link" href="#plantas">Plantas</a></li>
+					<li><a class="nav-link" href="#contato">Contato</a></li>
+				</ul>
+			</nav>
+		</header>
+    <main>
 
-            <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Malva.png" weight=200px width=" 400px"> 
+		<!--─────────────────Home────────────────-->
+		<div id="homeCarqueja">
+			<div class="filter"></div>
+			<section class="intro">
+				<h3>MALVA
+                    <hr>
+				</h3>
+			</section>
+		</div>
+
+       <!--───────────────Conteudo───────────────-->   
+
+       <link href="carrosel.css" rel="stylesheet" type="text/css" />
+
+       <div class="carrosel">    
+           <ul>
+               <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Malva_1.png" width="500px" height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Malva_2.png" width="500px"height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Malva_3.png" width="500px"height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Malva_4.png" width="500px"height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Malva_5.png" width="500px"height="400px">
+            </li>
+            <li>
+                <img src="/Users/sanmartin/Desktop/Plantas/midia/image/Malva_6.png" width="500px"height="400px">
+               </li>
+           </ul>
+       </div>  
+
+       <div class="filter"></div>
+       <section class="text">  
 
                     <p><b>Nome popular:</b> malva maior, malva-alta, malva- dedente, malva-cheirosa e malva silvestre.</p><br> 
 
@@ -46,9 +97,15 @@
                     e ao levantar fervura adicionar 5 colheres de sopa de folhas secas (ou flores) ou 8 colheres de folhas in natura picadas, deixar cerca de 1 minuto, desligar,
                     deixar descansar uns 5 minutos, coar e tomar quente ou frio umas 3 vezes ao dia. Também pode ser feito gargarejo e enxágue bucal.
                     Pode ser usado também em compressas sobre a pele.</p><br> 
-                </section>
-            </div>
-        </div>
-<body>
 
-</html>
+                    <p><b> Referências bibliográficas:.</p><br>     
+
+                    </section>
+                </div>
+            </div>
+
+            </main>
+
+        <body>
+            
+    </html>
