--- a/Proj_final_HMTL/Babosa.html
+++ b/Proj_final_HMTL/Babosa.html
@@ -20,9 +20,7 @@
 			<nav>
 				<ul class="nav-bar">
 					<div class="bg"></div>
-					<li><a class="nav-link" href="#home">Home</a></li>
-					<li><a class="nav-link" href="#plantas">Plantas</a></li>
-					<li><a class="nav-link" href="#contato">Contato</a></li>
+                    <li><a class="nav-link" href=Base.html>Home</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -101,7 +99,7 @@
                     <p><b> Forma de aplicação:</b> A babosa não deve ser usada por via oral, mas somente sobre a pele do couro cabeludo ou nos fios de cabelo.
                     Além disso, não deve ser usada por pessoas que têm alergia a essa planta medicinal, sendo por isso importante fazer o teste de alergia antes do seu uso. .</p><br><br>
 
-                    <p><b> Referências bibliográficas:.</p><br>     
+                    <p><b> Referências bibliográficas: .</p><br>     
 
                     </section>
                 </div>
