--- a/Proj_final_HMTL/Carqueja.html
+++ b/Proj_final_HMTL/Carqueja.html
@@ -20,9 +20,7 @@
 			<nav>	
                 <ul class="nav-bar">
                     <div class="bg"></div>
-                    <li><a class="nav-link" href="#home">Home</a></li>
-                    <li><a class="nav-link" href="#plantas">Plantas</a></li>
-                    <li><a class="nav-link" href="#contato">Contato</a></li>	
+                    <li><a class="nav-link" href=Base.html>Home</a></li>
                 </ul>		
 			</nav>
 		</header>
@@ -102,7 +100,7 @@
             <p><b> Forma de aplicação:</b> Para auxiliar na digestão, prepare um chá com 1 colher de sopa da erva para cada xícara de água
                 e tome até 3 vezes ao dia.</p><br><br> 
 
-            <p><b> Referências bibliográficas:.</p><br><br>  
+            <p><b> Referências bibliográficas: .</p><br><br>  
 
             </section>
         </div>
