--- a/Proj_final_HMTL/Cavalinha.html
+++ b/Proj_final_HMTL/Cavalinha.html
@@ -20,9 +20,7 @@
 			<nav>
 				<ul class="nav-bar">
 					<div class="bg"></div>
-					<li><a class="nav-link" href="#home">Home</a></li>
-					<li><a class="nav-link" href="#plantas">Plantas</a></li>
-					<li><a class="nav-link" href="#contato">Contato</a></li>
+                    <li><a class="nav-link" href=Base.html>Home</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -104,7 +102,7 @@
                 1 colher (sobremesa) de mel após esfriar e coar. Na sua composição química destaca-se a presença de óleo-resina, alcaloides (taraxina), taninos,
                 carotenoides, colina, fitoesterol, sais minerais (principalmente potássio) e princípio amargo (taraxicina).</p><br> 
 
-            <p><b> Referências bibliográficas:.</p><br>    
+            <p><b> Referências bibliográficas: .</p><br>    
 
             </section>
         </div>
