--- a/Proj_final_HMTL/Cidreira.html
+++ b/Proj_final_HMTL/Cidreira.html
@@ -20,9 +20,7 @@
 			<nav>
 				<ul class="nav-bar">
 					<div class="bg"></div>
-					<li><a class="nav-link" href="#home">Home</a></li>
-					<li><a class="nav-link" href="#plantas">Plantas</a></li>
-					<li><a class="nav-link" href="#contato">Contato</a></li>
+                    <li><a class="nav-link" href=Base.html>Home</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -99,7 +97,7 @@
                     <p><b> Forma de aplicação:</b>  Deve adicionar as folhas de cidreira na água fervida, desligue o fogo e deixe por 20 minutos, após passado o tempo     
                         adicione as folhas secas da planta e deixe tampado por 20 minutos, coe e beba 3 vezes ao dia.</p><br>
 
-                    <p><b> Referências bibliográficas:.</p><br>     
+                    <p><b> Referências bibliográficas: .</p><br>     
 
                     </section>
                 </div>
