--- a/Proj_final_HMTL/Guaco.html
+++ b/Proj_final_HMTL/Guaco.html
@@ -20,9 +20,7 @@
 			<nav>
 				<ul class="nav-bar">
 					<div class="bg"></div>
-					<li><a class="nav-link" href="#home">Home</a></li>
-					<li><a class="nav-link" href="#plantas">Plantas</a></li>
-					<li><a class="nav-link" href="#contato">Contato</a></li>
+                    <li><a class="nav-link" href=Base.html>Home</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -97,7 +95,7 @@
                     épreciso lembrar que todo medicamento, mesmo sendo caseiro depende de um diagnóstico e acompanhamento médico antes de ser consumido.
                     O xarope pode ser utilizado até 3 vezes ao dia.</p><br>
 
-                    <p><b> Referências bibliográficas:.</p><br>     
+                    <p><b> Referências bibliográficas: .</p><br>     
 
                     </section>
                 </div>
