--- a/Proj_final_HMTL/Malva.html
+++ b/Proj_final_HMTL/Malva.html
@@ -20,9 +20,7 @@
 			<nav>
 				<ul class="nav-bar">
 					<div class="bg"></div>
-					<li><a class="nav-link" href="#home">Home</a></li>
-					<li><a class="nav-link" href="#plantas">Plantas</a></li>
-					<li><a class="nav-link" href="#contato">Contato</a></li>
+                    <li><a class="nav-link" href=Base.html>Home</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -98,7 +96,7 @@
                     deixar descansar uns 5 minutos, coar e tomar quente ou frio umas 3 vezes ao dia. Também pode ser feito gargarejo e enxágue bucal.
                     Pode ser usado também em compressas sobre a pele.</p><br> 
 
-                    <p><b> Referências bibliográficas:.</p><br>     
+                    <p><b> Referências bibliográficas: .</p><br>     
 
                     </section>
                 </div>
